Fix table line spacing

--- a/doclet/src/main/resources/template/css/custom.css
+++ b/doclet/src/main/resources/template/css/custom.css
@@ -242,7 +242,6 @@ table {
     max-width: 100%;
     margin-bottom: 20px;
     margin-top: 20px;
-    line-height: 26px;
     clear: both;
 }
 
@@ -251,6 +250,10 @@ table>tbody>tr>td, table>tbody>tr>th, table>tfoot>tr>td, table>tfoot>tr>th, tabl
     border-top: 1px solid #ddd;
     vertical-align: top:
     line-height: 1.5em;
+}
+
+.nav>li {
+    line-height: 31px;
 }
 
 th {
